--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,26 +5,26 @@
 %html{:xmlns=>'http://www.w3.org/1999/xhtml'}
   %head
     %link{:rel=>"icon", :type=>"image/png", :href=>image_path("favicon.png")}
-    =title_tag # text/xml;charset=UTF-8
+    =title_tag
     =theme_link_tag(@current_theme)
     =calendar_link_tag
     =javascript_include_tag :defaults
-    =javascript_include_tag 'dyke'
-  %body{:onload=>"resize();", :onresize=>"resize();"}
-    #body{:orient=>:vertical, :flex=>1}
-      =top_tag
-      #columns.columns{:orient=>:horizontal, :flex=>1}
-        -side=side_tag
-        -unless side.blank?
-          #side{:orient=>:vertical, :style=>"overflow: visible"+(session[:side] ? "" : "; display:none")}=side
-        #main.main{:flex=>9, :orient=>:vertical, :class=>("with-side" if session[:side]), :style=>"position: absolute; top: 0px; overflow: visible;"}
+    =#javascript_include_tag 'layout'
+    =#javascript_include_tag 'dyke'
+  %body{:xonload=>"resize();", :wwonload=>"layoutManager = new LayoutManager(); alert(layoutManager);", :xonresize=>"resize();"}
+    #body.vbox.flex
+      #top=top_tag
+      #wrap
+        #side.hbox{:style=>"overflwow: visible"+(session[:side] ? "" : "; display:none")}=side_tag
+        -#=help_tag(:flex=>3)
+        #help.help.flex-3{:style=>"#{'display:none;' unless session[:help]}; width: 240px;"}=help_tag
+        #main.vbox.main.flex-9{:class=>("with-side" if session[:side]), :xstyle=>"position: absolute; top: 0px; overflow: visible;"}
           .nav
             =help_link_tag
             =side_link_tag
             -title = action_title
             %h1.title{:title=>title}=title
-          .yield{:flex=>1, :orient=>:vertical}
+          .yield.flex.vbox
             =notifications_tag
             =yield
-        =help_tag(:flex=>3)
-   
+
