--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -1,6 +1,6 @@
 * {margin:0; padding:0; font-family: sans-serif;}
 /* BLUE EKYLIBRE : #3060FF */
-html {background: #FFF;}
+html {background: #C9D7F1;}
 fieldset { border:1px solid #95b0e4; -moz-border-radius: 4px; padding:  8px 0px 0px; margin: 1px 1px 8px; background: url(../images/columns.png) repeat-x top; }
 fieldset legend { padding: 0 4px;  margin: 0 4px; color: #047; font-size: 15px; font-weight: bold;}
 fieldset nobr { margin: 0 8px; vertical-align: middle; }
@@ -15,6 +15,15 @@ input[type="submit"] { padding: 1px 4px; }
 table#master  { margin-top:30px; }
 table#master > tbody > tr > td { vertical-align: top;  }
 table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
+/*
+.hbox, .vbox, .hbox > *, .vbox > * {padding: 0; border: 0; margin: 0; }
+.hbox { display:table-row;}
+.hbox > * { height: inherit; display:table-cell;  vertical-align: top;}
+.vbox { padding: 0; border: 0; margin: 0; }
+.vbox > * { width: inherit; }
+*/
+body { background: #C9D7F1; }
+#body > div > .hbox > * { overflow: auto; }
 
 #loading { padding: 2px; text-align: center; }
 
@@ -26,10 +35,10 @@ table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
 .dialog {  background: #C9D7F1; }
 .dialog .columns { border: 8px solid #95b0e4; }
 .dialog .main { border-top: 1px solid #95b0e4; none; padding: 0 8px 8px 8px;}
-.fields { background: url(../images/shadow-top.png) repeat-x bottom; overflow: auto; }
+.fields { background: url(../images/shadow-top.png) repeat-x bottom; overflow: auto; height: 480px;}
 
 .end { height: 8px;}
-.main { overflow: visible; border-top: 1px solid #95b0e4; background: #C9D7F1; padding: 0 8px 8px 8px;}
+.main { border-top: 1px solid #95b0e4; background: #C9D7F1; padding: 0 8px 8px 8px;} /*  overflow: visible; */
 #main.with-side { padding-left: 0px; }
 /*#legals { margin:0; padding:4px 8px; height: 0px; background: #C9D7F1; font-size:13px; color: #047; text-align: center; }*/
 
@@ -45,7 +54,7 @@ table#master > tbody > tr > td > .column { height: 300px; overflow: auto; }
 .main .nav .title { color: #012; }
 
 
-.help-link { float:right; padding: 8px 4px; margin-left: 4px;}
+.help-link { float:right; padding: 7px 4px; margin-left: 4px;}
 /*a.help-link { padding: 4px; font-size: 13px; }*/
 .help a.help-link { color: #750; }
 a.help-link:hover { color:black; }
@@ -53,16 +62,11 @@ a.help-open { background: url(../images/buttons/help.png) no-repeat scroll left 
 a.help-close { background: url(../images/buttons/close.png) no-repeat scroll left center; padding-left:20px; }
 a.help-previous { background: url(../images/buttons/previous.png) no-repeat scroll left center; padding-left:20px; }
 
-.help { width: 256px; border-left: 1px solid #BEBEBB; border-top: 1px solid #BEBEBB; background: #fefef9 url(../images/help.png) repeat-x top;}
+.help { width: 260px; float:right; margin-left: 8px; border: 1px solid #BEBEBB; border-right: none; background: #fefef9 url(../images/help.png) repeat-x top;}
 .help .nav { background: #e9e9a8; padding: 0 2px; }
 .help .title { color: #750; text-align: left; }
 .content { padding: 8px; clear: both;}
 .content * { color: #543 }
-/*
-.content h1 { font-size: 17px; margin: 0px 0px 16px; color: #750; font-weight:normal; color: #000}
-.content h2 { font-size: 15px; margin: 8px 8px 4px;  border-bottom: 1px solid #dd8; color: #000}
-.content h3 { font-size: 13px; margin: 4px 16px 2px; border-bottom: 1px dotted #dd8; font-weight: bold; color: #000 }
-*/
 .content h1 { font-size: 17px; margin: 0px 0px 16px; color: #750; font-weight:normal; color: #000}
 .content h2 { font-size: 15px; margin: 8px 0px 4px; border-left: 10px solid #543; padding: 0 0 0 4px; border-bottom: 1px dotted #543; color: #000}
 .content h3 { font-size: 13px; margin: 4px 0 2px 10px; border-left: 10px solid #B82; padding: 0 0 0 4px; border-bottom: 1px dotted #B82; font-weight: bold; color: #000 }
@@ -90,7 +94,7 @@ a.help-previous { background: url(../images/buttons/previous.png) no-repeat scro
 #side-close div { background: url(../images/buttons/close3.png) left center no-repeat;}
 
 /*#side { width: 192px; padding: 0 4px 8px 8px; background: #c9d7f1; overflow: auto;  border-top: 1px solid #95b0e4;}*/
-#side { width: 200px; padding: 0; overflow: auto; background: #c9d7f1 url(../../../images/ekylibre-mini.png) no-repeat 8px 8px; border-top: 1px solid #95b0e4;   /*#c9d7f1;*/ } /* border-right: 1px solid #95b0e4;*/
+#side { width: 200px; padding: 0; float: left;  overflow: hidden; background: #c9d7f1 url(../../../images/ekylibre-mini.png) no-repeat 8px 8px; border-top: 1px solid #95b0e4;   /*#c9d7f1;*/ } /* border-right: 1px solid #95b0e4;*/
 /*#side .nav { background: #95b0e4; }
 #side .nav .title { color: #012; }*/
 #side .menus { /*background: #fefef9 url(../images/help.png) repeat-x top;*/ padding: 0 8px;}
@@ -129,14 +133,13 @@ a.help-previous { background: url(../images/buttons/previous.png) no-repeat scro
 .yield .menu.special a:link, .yield .menu.special a:visited { color: #A60; }
 .yield .menu.indicator { background: #FD8; } /*#FA3;*/
 
-#top {height: 24px; background: white; }
-#top .menu * { padding: 4px 4px 5px;}
+#top {height: 25px; background: white; padding: 0 8px;}
+#top .menu * { padding: 3px 4px;}
 /*#top .menu strong { background: #E4EBF8;}*/
 #top .menu a.logout {padding: 2px 2px 2px 20px; height:16px; background: url(../images/buttons/logout.png) no-repeat center left;}
-#top #user span { padding-right: 10px; }
-#top #user { float:right; height:24px; margin:4px 0; text-align:right;}
-#top #modules { float:left; height:24px; margin-top:4px; }
-#top #loading { background: url(../images/ajax-loader-3.gif) no-repeat; margin: 4px; width: 16px; height:16px; }
+#top #user { float:right; margin:4px 0; text-align:right;}
+#top #modules { float:left; margin-top:4px; }
+#top #loading { float:right; background: url(../images/ajax-loader-3.gif) no-repeat; margin: 4px 0 0; width: 16px; height:16px; }
 
 
 .clearfix:after { content: "."; display:block; height:0; clear: both; visibility: hidden; }
