Continue to fix layout
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1558 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/change_password.html.haml
+++ b/app/views/company/change_password.html.haml
@@ -1,5 +1,5 @@
--form_tag(nil, {:flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
-  .fields{:flex=>10}
+-form_tag(nil, {:class=>"flex vbox", :style=>'overflow:none'}) do
+  .fields.flex
     =formalize do |f|
       -f.error 'user'
       -f.title tc("insert_actual_password")
