--- a/app/views/accountancy/draft_entries.html.haml
+++ b/app/views/accountancy/draft_entries.html.haml
@@ -1,5 +1,5 @@
--form_tag(nil, {:flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
-  .fields{:flex=>10}
+-form_tag(nil, {:class=>"vbox flex", :style=>'overflow:none'}) do
+  .fields.flex
     =journals_tag
     .search=render :partial=>"journals_search"
     =dyta(:draft_entries)
