--- a/app/views/company/import.html.haml
+++ b/app/views/company/import.html.haml
@@ -1,5 +1,5 @@
--form_tag(nil, {:multipart=>true, :flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
-  .fields{:flex=>10}
+-form_tag(nil, {:multipart=>true, :class=>"vbox flex", :style=>'overflow:none'}) do
+  .fields.flex
     =formalize do |f|
       -f.field tc("file_to_import"), file_field_tag(:upload)
       -f.field tc("file_nature"), select_tag(:nature, options_for_select(@supported_files))
