--- a/public/themes/tekyla/stylesheets/dyta.css
+++ b/public/themes/tekyla/stylesheets/dyta.css
@@ -24,9 +24,9 @@ table.dyta tr.even td {background: #F0F2FF;}
 table.dyta tr.root td {font-weight: bold; }
 table.dyta tr      td {padding: 0px 2px;color: #007; height:22px;}
 table.dyta tr      td.chk { text-align:center}
-table.dyta tr      td.act { padding: 0 1px;  }
-table.dyta tr      td.act a {padding: 1px; width:16px; margin: 0; display:block; text-align: center;}
-table.dyta tr      td.act a  img {padding: 0; margin: 0; display:block;}
+table.dyta tr      td.act { padding: 0 1px; width:18px; }
+table.dyta tr      td.act a {padding: 1px; margin: 0; display:block; text-align: center;}
+table.dyta tr      td.act a img {padding: 0; margin: 0; display:block; border: none;}
 /*
 table.dyta tr.odd  td.act { background: #E5D9DD; }
 table.dyta tr.even td.act { background: #F2E4DD; }
