--- a/app/views/accountancy/account_letter.html.haml
+++ b/app/views/accountancy/account_letter.html.haml
@@ -33,16 +33,16 @@
       %tr{:id=>trid, :class=>(checked ? "notice " :  (@journal_entry.letter.blank? ? "" : ""))+cycle("even", "odd")}
         %td.chk
           -if @journal_entry.letter.blank? or checked
-            =check_box_tag("journal_entry[#{@journal_entry.id}][to_letter]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t2();" )
+            =check_box_tag("journal_entry[#{@journal_entry.id}][to_letter]", "1", checked, :onclick =>"if(this.checked) {$('#{trid}').addClassName('notice');} else {$('#{trid}').removeClassName('notice');}; t2();", :id=>"journal_entry_#{@journal_entry.id}_to_letter" )
           -else
             =@journal_entry.letter
             =link_to(image_tag(theme_button(:unletter), :border=>0), {:action=>:account_unletter, :id=>@account.id, :letter=>@journal_entry.letter}, :method=>:post, :confirm=>tg(:are_you_sure))
         %td.date=I18n.localize(@journal_entry.record.printed_on)
         %td=link_to(@journal_entry.journal.name, {:action=>:journal, :id=>@journal_entry.journal_id}, :keep=>true)
         %td.code=link_to(@journal_entry.record.number, {:action=>:journal_record, :id=>@journal_entry.record_id}, :keep=>true)
-        %td=@journal_entry.name
-        %td.decimal.debit=number_to_accountancy(@journal_entry.debit)
-        %td.decimal.credit=number_to_accountancy(@journal_entry.credit)
+        %td.clickable{:onclick=>"toggleCheckBox('journal_entry_#{@journal_entry.id}_to_letter')"}=@journal_entry.name
+        %td.decimal.debit.clickable{:onclick=>"toggleCheckBox('journal_entry_#{@journal_entry.id}_to_letter')"}=number_to_accountancy(@journal_entry.debit)
+        %td.decimal.credit.clickable{:onclick=>"toggleCheckBox('journal_entry_#{@journal_entry.id}_to_letter')"}=number_to_accountancy(@journal_entry.credit)
     %tr#total.total
       %th{:colspan=>5}=tg(:total)
       %td#total-debit=0
