Add filters on events
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1562 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/help/_search.html.haml
+++ b/app/views/help/_search.html.haml
@@ -17,6 +17,8 @@
       - else
         =doc
       %ul
+        -# cnt = @article.split("-")[0]
+        -# %li=link_to_remote(::I18n.t("controllers.#{cnt}.title"), :url=>base_url.merge(:action=>:search, :article=>cnt+"-index"), :update=>update, :complete=>complete, :loading=>"onLoading();", :loaded=>"onLoaded();")
         %li=link_to_remote(tc("home"), :url=>base_url.merge(:action=>:search, :article=>"company-index"), :update=>update, :complete=>complete, :loading=>"onLoading();", :loaded=>"onLoaded();")
         %li=link_to(tc("ekylibre"), "http://www.ekylibre.org")
       .end
