--- a/app/views/relations/events.html.haml
+++ b/app/views/relations/events.html.haml
@@ -1,3 +1,12 @@
+-form_tag({}, :method=>:get) do
+  .search
+    %table
+      %tr 
+        %td.crit
+          =tc(:search)
+          =text_field_tag("key", params[:key], :size=>30)
+        %td.submit=submit_tag tg(:search_go), :name=>nil
+
 =toolbar do
   -link :event_create
 =dyta :events
