Fixes some bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1566 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/account.html.haml
+++ b/app/views/accountancy/account.html.haml
@@ -2,7 +2,7 @@
   -t.link :account_update, :id=>@account.id
   -if @account.letterable?
     -t.link :account_letter, :id=>@account.id
-%table.flex
+%table.full-width
   %tr
     %td
       =evalue @account, :number
