--- a/app/views/company/_help_result.html.haml
+++ b/app/views/company/_help_result.html.haml
@@ -1,2 +1,2 @@
-=link_to_remote(wikize(result[:title], :without_paragraph=>true), :url=>{:action=>:help, :article=>result[:name]}, :update=>:helpage)+' '
+=link_to_remote(wikize(result[:title], :without_paragraph=>true), :url=>{:action=>:help, :article=>result[:name]}, :update=>:helpage)
 %span.pertinence=tc(:pertinence, :value=>result[:pertinence].to_s)
