--- a/app/views/management/_sale_order_line_detail_row_form.html.haml
+++ b/app/views/management/_sale_order_line_detail_row_form.html.haml
@@ -1,5 +1,5 @@
 -if product = @sale_order_line.product
-  %table.flex
+  %table.full-width
     %tr
       %td=tc('quantity')
       -#%td=tc('unit')
