Fix some little bugs
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1570 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/journal.html.haml
+++ b/app/views/accountancy/journal.html.haml
@@ -28,9 +28,9 @@
     %th=JournalRecord.human_attribute_name("credit")
   %tr.important.total
     %th=tc :totals
-    %td=@totals[:debit]
-    %td=@totals[:credit]
+    %td=number_to_accountancy @totals[:debit]
+    %td=number_to_accountancy @totals[:credit]
   %tr.important.total
     %th=tc :balance
-    %td=@totals[:balance_debit]
-    %td=@totals[:balance_credit]
+    %td=number_to_accountancy @totals[:balance_debit]
+    %td=number_to_accountancy @totals[:balance_credit]
