Begins to fix some bugs but one very important remaining INSTABLE
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1575 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,8 @@
     =theme_link_tag(@current_theme)
     =calendar_link_tag
     =javascript_include_tag :defaults
-    =#javascript_include_tag 'layout'
     =javascript_include_tag "dyke"
+    =javascript_include_tag "raphael", "openlayers"
   %body
     #body.flex
       #top=top_tag
